test/should-fail/比较-1.j
function test takes nothing returns nothing
    local handle u = null
    local handle it = null
    local integer i = 0
    local real r = 0.0
    local boolean b1 = i == r
    local boolean b2 = u == it
    local boolean b3 = i == u
endfunction